# dirty-soap

./: .eslintrc.json  .gitignore  .verification-checklist.md  .vscodeignore  AGENTS.md  BUILD_STATUS.md  CHANGELOG.md  CODE_ANALYSIS.md  DEBUG_MODAL_INFO.md  DEBUG_SCREEN_IMPLEMENTATION.md  LOCAL_XSD_FIX.md  MARKETPLACE_README.md  PROXY_CERTIFICATE_SETUP.md  README.md  STANDALONE_SIDECAR.md  TODO.md  WCF_DEBUGGING.md  bind-proxy-cert.ps1  copilot-session-6ece2bd2-d201-4019-8dd6-9d6696882d77.md  debug-operation-data.js  debug-proxy-config.ps1  fix-cert-store.ps1  increment-build.js  install-proxy-cert.ps1  manual.md  package-lock.json  package.json  prepare-sidecar-binary.js  sync-version.js  test-cert-https.js  test-generation-direct.js  test_graphql.js  tsconfig.json  verify_formatter.js  verify_local_soap.js  verify_local_soap.js.map
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: lib.rs  main.rs
src-tauri/webview/: build_log.txt  index.html  package-lock.json  package.json  tsconfig.json  vite.config.js.map  vite.config.ts
src-tauri/webview/src/: ARCHITECTURE.md  App.tsx  index.css  main.tsx
src-tauri/webview/src/__tests__/: requestUpdateRouting.test.tsx  stepSyncIntegration.test.tsx
src-tauri/webview/src/components/: AssertionsPanel.test.tsx  AssertionsPanel.tsx  AttachmentsPanel.tsx  ContextHelpButton.tsx  ExtractorsPanel.test.tsx  ExtractorsPanel.tsx  GraphQLVariablesPanel.tsx  HeadersPanel.tsx  MainContent.tsx  MonacoRequestEditor.tsx  RestAuthPanel.tsx  SchemaViewer.tsx  (+4 more)
(+317 files in other folders)
